--- a/drcp-backend/src/main/resources/application.properties
+++ b/drcp-backend/src/main/resources/application.properties
@@ -3,9 +3,9 @@ spring.application.name=backend
 # ----------------------------
 # DataSource Configuration
 # ----------------------------
-spring.datasource.url=jdbc:oracle:thin:@localhost:1521:xe
-spring.datasource.username=system
-spring.datasource.password=ashStoic143
+spring.datasource.url=${DB_URL}
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
 
 # ----------------------------
@@ -31,8 +31,3 @@ logging.level.org.hibernate.type.descriptor.sql=TRACE
 # Optional: Naming Strategy
 # ----------------------------
 #spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
-
-#GEMINI_API_KEY=AIzaSyBrgSaxYPz95HMVJPnZTRkgBR3f1Mqje1Y
-
-
-upload.directory=uploads/
