--- a/drcp-backend/src/main/resources/application.properties
+++ b/drcp-backend/src/main/resources/application.properties
@@ -31,3 +31,5 @@ logging.level.org.hibernate.type.descriptor.sql=TRACE
 # Optional: Naming Strategy
 # ----------------------------
 #spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+
+server.port=${PORT:8080} 
