--- a/drcp-backend/Dockerfile
+++ b/drcp-backend/Dockerfile
@@ -1,12 +1,19 @@
-# ---- Build Stage ----
-FROM maven:3.9.6-eclipse-temurin-17 as builder
+FROM maven:3.8.4-openjdk-17 AS build
+
 WORKDIR /app
-COPY . .
+
+COPY pom.xml .
+RUN mvn dependency:go-offline
+
+COPY src ./src
 RUN mvn clean package -DskipTests
 
-# ---- Run Stage ----
 FROM openjdk:17-jdk-slim
+
 WORKDIR /app
-COPY --from=builder /app/target/*.jar app.jar
+
+COPY --from=build /app/target/drcp-backend-0.0.1-SNAPSHOT.jar .
+
 EXPOSE 8080
-ENTRYPOINT ["java", "-jar", "app.jar"]
+
+ENTRYPOINT ["java", "-jar", "/app/drcp-backend-0.0.1-SNAPSHOT.jar"]
