--- a/drcp-backend/src/main/resources/application.properties
+++ b/drcp-backend/src/main/resources/application.properties
@@ -3,10 +3,12 @@ spring.application.name=backend
 # ----------------------------
 # DataSource Configuration
 # ----------------------------
-spring.datasource.url=jdbc:oracle:thin:@localhost:1521:xe
-spring.datasource.username=system
-spring.datasource.password=ashStoic143
+spring.datasource.url=${DATASOURCE_URL}
+spring.datasource.username=${DATASOURCE_USERNAME}
+spring.datasource.password=${DATASOURCE_PASSWORD}
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
+
+frontend.url=${FRONTEND_URL}
 
 # ----------------------------
 # JPA / Hibernate Configuration
