--- a/drcp-backend/src/main/resources/application.properties
+++ b/drcp-backend/src/main/resources/application.properties
@@ -6,7 +6,8 @@ spring.application.name=backend
 spring.datasource.url=${DATASOURCE_URL}
 spring.datasource.username=${DATASOURCE_USERNAME}
 spring.datasource.password=${DATASOURCE_PASSWORD}
-spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
+spring.datasource.driver-class-name=org.postgresql.Driver
+#spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
 
 frontend.url=${FRONTEND_URL}
 
@@ -14,7 +15,8 @@ frontend.url=${FRONTEND_URL}
 # JPA / Hibernate Configuration
 # ----------------------------
 # Hibernate dialect
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.OracleDialect
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.OracleDialect
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
 # Automatically create/update database schema
 spring.jpa.hibernate.ddl-auto=update
